# kanban_life

./: .gitignore  Dockerfile  Pipfile  Procfile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
kanban_life/: asgi.py  settings.py  urls.py  wsgi.py
kanban_life/board/: apps.py  models.py  views.py
kanban_life/board/migrations/: 0001_initial.py  0002_initial.py  0002_tarefa.py  0003_tarefa_posicao.py  0004_alter_tarefa_nome.py  0005_alter_tarefa_descricao_alter_tarefa_tempo.py  0006_tarefa_alterado_em_tarefa_cor_tarefa_criado_em.py
kanban_life/board/templates/board/: base.html  board.html
kanban_life/home/: admin.py  apps.py  forms.py  models.py  views.py
kanban_life/home/migrations/: 0001_initial.py
kanban_life/home/templates/home/: about.html  base.html  error_404.html  home.html  login.html  sign_up.html
kanban_life/login/: apps.py  forms.py  views.py
kanban_life/login/templates/login/: login.html
kanban_life/tools/: apps.py  views.py
pm2/: workers.config.js
static/css/: style.css
staticfiles/css/: style.css
